minor bug fix on ios

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -158,6 +158,7 @@
           border-radius: 99rem;
           border: $border-btn;
           background-color: white;
+          color: inherit;
           cursor: pointer;
           font-family: inherit;
           font-size: 1.2rem;
